feat(bkn-trace): add snapshot preview api (#428)
